logs/Slang/generated/keywords/5.6.2--keyword_s_always.sv.log
name: keyword_s_always
description: The 's_always' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_s_always.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_s_always.sv:8:8: error: expected declarator
    bit s_always;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_s_always.sv:8:9: error: expected member
    bit s_always;
        ^~~~~~~~
